# azure_staff_engineer

./: LICENSE  README.md
src/khronos/: artifacts.dvc  pyproject.toml
src/khronos/.dvc/: config
src/khronos/experiments/: interactive.ipynb
src/khronos/khronos/: data_loader.py  task.py  transform.py
src/khronos/tests/: test_transform.py
