[tool.poetry]
name = "khronos"
version = "0.1.0"
description = ""
authors = ["Stef Ruinard <stefruinard@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.10.1"
dvc-azure = "^2.22.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
